--- a/public/Quiz/quiz.html
+++ b/public/Quiz/quiz.html
@@ -8,15 +8,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Quiz App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="quiz.css">
 </head>
 
 <body>
-    <div class="start">
-        <h1>Start the Quiz</h1>
-        <p>Good luck!</p>
-        <a href="Quiz/quiz.html">Start the HTML Quiz ></a>  
+    <div class="main">
+        <div>
+            <h5 class="que">Question 3/5</h5>
+        </div>
+        <div>
+            <h5 class="q bg-secondary bg-gradient">HTML Stands for ____________</h5>
+        </div>
+        <div class="opt bg-secondary bg-gradient">
+            <div>
+                <button class="op">Hyper text markup language</button>
+                <button class="op">Home tool markup language</button>
+                <button class="op">Hyper links and text markup language</button>
+                <button class="op">Home and text markup language</button>
+            </div>
+        </div>
+        <div class="ne">
+            <button class="next">Next ></button>
+            <h5 class="timer">Timer <span>02</span> : <span>00</span></h5>
+        </div>
     </div>
+
+
+
 
 
 
