--- a/public/Quiz/quiz.html
+++ b/public/Quiz/quiz.html
@@ -5,47 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../Guess_Quiz_Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title>Quiz App</title>
+    <title>HTML Quiz</title>
     <link rel="stylesheet" href="quiz.css">
 </head>
 
 <body>
-    <div class="main">
-        <div>
-            <h5 class="que">Question 3/5</h5>
+    <div class="main" id="main">
+        <div id="sss">
+            <h5 class="que">Question <span id="done"></span> / <span id="total"></span></h5>
         </div>
         <div>
-            <h5 class="q bg-secondary bg-gradient">HTML Stands for ____________</h5>
+            <h5 class="q bg-secondary bg-gradient" id="question"></h5>
         </div>
-        <div class="opt bg-secondary bg-gradient">
-            <div>
-                <button class="op">Hyper text markup language</button>
-                <button class="op">Home tool markup language</button>
-                <button class="op">Hyper links and text markup language</button>
-                <button class="op">Home and text markup language</button>
-            </div>
-        </div>
+        <div class="opt bg-secondary bg-gradient" id = "options"></div>
         <div class="ne">
-            <button class="next">Next ></button>
-            <h5 class="timer">Timer <span>02</span> : <span>00</span></h5>
+            <button class="next" id="next" onclick="next()">Next ></button>
+            <button class="next submit" id="submit" onclick="submit()">Submit</button>
+            <h5 class="timer">Timer <span id="min">01</span> : <span id="sec">59</span></h5>
         </div>
     </div>
 
+    <div class="result" id="result">
+        <h1>Your Result is:</h1>
+        <div>
+            <h3><span id="marks"></span><span>%</span></h3>
+        </div>
+    </div>
+    
+    
 
 
-
-
-
-
+    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
-    <script src="app.js"></script>
 </body>
 
 </html>
